loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:1: error: Missing closing brace `}' assumed here
for (i<-1 to 10){
^LoopCourse:2: error: '<-' expected but integer literal found.
  for (compte 1 to 8)
              ^LoopCourse:17: error: illegal start of simple expression
	}
        ^