loopfor.LoopCourse.scala.code
for (i<-1 to 10){
	for (compte 1 to 8)
		avance()
  gauche()
    
  for (compte 1 to 8)
		avance()  
  gauche()
  for (compte 1 to 8)
		avance()
  gauche()
  for (compte 1 to 8)
		avance()
    
    